--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,3 +1,25 @@
 body {
     margin: 0;
 }
+.searchButton {
+    font-size: 1.5em;
+    height: 48px;
+    background-color: #44c767;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.searchInput {
+    height: 40px;
+    border-radius: 3px;
+    border: solid 2px green;
+    font-size: 1.5em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.search {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
