--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,5 +1,11 @@
 body {
     margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.menu{
+    display: flex;
+    justify-content: space-between;
 }
 .searchButton {
     font-size: 1.5em;
@@ -15,6 +21,12 @@ body {
     font-size: 1.5em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.brandName{
+    align-self: center;
+    font-size: 30px;
+    padding-left: 5px;
+    font-weight: bold;
+}
 .search {
     width: 100%;
     text-align: center;
@@ -22,4 +34,19 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.logo{
+    width: 25px;
+    margin-left: 10px;
+}
+@media (max-width: 600px){
+    .menu, .search{
+        flex-direction: column;
+    }
+    .searchButton, .searchInput{
+        width: 100%
+    } 
+    .logo{
+        display: none;
+    }
 }
