--- a/frontend/HajzlMaster/style.css
+++ b/frontend/HajzlMaster/style.css
@@ -1,35 +1,145 @@
-body{
+body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #EEE;
+    background-color: #f8f8f8;
+
+    font-family: 'Roboto', sans-serif;
 }
 
-.main{
-    max-width: 960px;
-    
+header {
+    margin-top: 10px;
+    width: 1024px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
+
+.logo-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.user-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.user-box .user-icon {
+    width: 40px;
+    height: 40px;
+}
+
+.top-box {
+    margin: 30px 0 30px 0;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: space-between;
+}
+
+main > section {
+    width: 49%;
+    padding: 15px;
+    box-sizing: border-box;
+    margin-bottom: 10px
+}
+
+main > section:nth-child(2n+0){
+    margin-left: 10px;
+}
+
+    main > section > h2 {
+        margin: 0px 0px 15px 0px;
+    }
+
+.user-box .menu-down {
+    width: 25px;
+    height: 25px;
+}
+
+.user-box .user-names{
+    display: flex;
+    flex-direction: column;
+}
+
+.user-box .user-names > span{
+    display: block;
+}
+
+main {
+    margin-top: 20px;
+    width: 1024px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.total-statistic, alert-box {
+    background-color: #ffffff;
+    border-radius: 5px;
+}
+
+.total-statistic p{
+    padding-left: 10px
+}
+
+
+.alert-box .alert-cont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} 
 
 .alert-box {
-    width: 800px;
     background-color: white;
     border-radius: 5px;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .alert-message {
-    display: block;
+    width: 90%;
+    padding: 5px;
+    box-sizing: border-box;
     border-radius: 2px;
-    width: 650px;
     text-align: center;
-    padding: 10px;
-    margin: 5px 0;
+    margin-bottom: 7px;
 }
 
-.alert-message p {
+.alert-message > p {
     margin: 0;
 }
 
+.graphs > canvas {
+    width: 800px !important;
+    height: 300px !important;
+}
+
+.graphs {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.graph-box {
+    width: 49%;
+    background-color: #ffffff;
+
+}
+
+.graph-box h2 {
+    margin: 0px 0px 15px 0px;
+}
+
+.graph-box select {
+    display: inline;
+}
+
+.graph-box canvas{
+    margin-top: 10px;
+    width: 450px !important;
+    height: 200px !important;
+}
